# whisper_real_time

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/wrt/: __main__.py  utils.py
